--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,31 +3,30 @@ $main-color: #07142d;
   padding-top: 24px;
   padding-bottom: 24px;
   position: fixed;
-    @media screen and (min-width:320px) and (max-width:767px){
+  @media screen and (min-width: 320px) and (max-width: 767px) {
     display: none;
-   }
+  }
 }
 .header-container {
   display: flex;
   align-items: center;
-  
 }
 .logo {
   margin-right: 15px;
-     @media screen and (min-width:1200px){
-         margin-right: 65px;
-     }
+  @media screen and (min-width: 1200px) {
+    margin-right: 65px;
+  }
 }
 .nav__list {
   display: flex;
   align-items: center;
   gap: 15px;
 
-    @media screen and (min-width:768px) {
-  gap: 15px;
+  @media screen and (min-width: 768px) {
+    gap: 15px;
   }
-  @media screen and (min-width:1200px) {
-     gap: 32px;
+  @media screen and (min-width: 1200px) {
+    gap: 32px;
   }
 }
 .nav__item {
@@ -35,9 +34,9 @@ $main-color: #07142d;
   font-size: 12px;
   line-height: 1.5;
   color: rgba(7, 20, 45, 0.4);
-   @media screen and (min-width:768px) {
-  font-size: 14px;
-   }
+  @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
 }
 .nav__link {
   padding-top: 16px;
@@ -50,8 +49,8 @@ $main-color: #07142d;
   }
 }
 .header__btn {
-        padding: 10px 20px;
-    min-width: 130px;
+  padding: 10px 20px;
+  min-width: 130px;
 
   border: none;
   color: #ffffff;
@@ -62,22 +61,22 @@ $main-color: #07142d;
   background-color: $main-color;
   margin-left: auto;
   cursor: pointer;
-    transition: 250ms ease-in-out;
+  transition: 250ms ease-in-out;
   transform: scale(1);
-  
-   &:hover,
+
+  &:hover,
   &:focus,
   &:active {
-     box-shadow: 0 4px  4px  rgba(0, 0, 0, .1),
-               0 1px  6px  rgba(0, 0, 0, .05),
-               0 8px  8px  rgba(0, 0, 0, .1), 
-               0 16px 16px rgba(0, 0, 0, .1), 
-               8px 32px 32px rgba(0, 0, 0, .15), 
-               8px 64px 64px rgba(0, 0, 0, .15); 
-               transform: scale(1.02);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1), 0 1px 6px rgba(0, 0, 0, 0.05),
+      0 8px 8px rgba(0, 0, 0, 0.1), 0 16px 16px rgba(0, 0, 0, 0.1),
+      8px 32px 32px rgba(0, 0, 0, 0.15), 8px 64px 64px rgba(0, 0, 0, 0.15);
+    transform: scale(1.02);
   }
 
-  @media screen and (min-width:1200px){
-      padding: 17px 40px;
+   @media screen and (min-width: 768px) {
+    font-size: 14px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 17px 40px;
   }
 }
