--- a/sass/layouts/_KMC.scss
+++ b/sass/layouts/_KMC.scss
@@ -3,12 +3,20 @@
   @media screen and (min-width: 320px) and (max-width: 767px) {
     padding-top: 50px;
   }
+   @media screen and (min-width: 768px){
+    padding-top: 100px;
+   }
 }
 .kmc-container {
   @media screen and (min-width: 320px) and (max-width: 767px) {
     text-align: center;
   }
-
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    position: relative;
+  }
+@media screen and (min-width: 768px){
+ gap: 30px; 
+}
   @media screen and (min-width: 768px) {
     display: flex;
     align-items: center;
@@ -16,7 +24,7 @@
   }
 }
 .kms__title-wrap {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     padding-left: 48px;
   }
 }
@@ -26,13 +34,24 @@
   line-height: 1.5;
   margin-bottom: 24px;
   @media screen and (min-width: 768px) {
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 1200px) {
     font-size: 32px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    position: absolute;
+    top: -60px;
   }
 }
 .pagination {
   display: flex;
   align-items: center;
-  margin-bottom: 48px;
+  margin-bottom: 25px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 48px;
+  }
 }
 .pagination__title {
   font-weight: 600;
@@ -78,6 +97,9 @@
   line-height: 1.5;
   margin-bottom: 40px;
   @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
     font-size: 18px;
     margin-bottom: 83px;
   }
@@ -114,7 +136,7 @@
   }
 }
 .link {
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1200px) {
     padding: 12px 16px;
   }
 }
