--- a/sass/layouts/_works.scss
+++ b/sass/layouts/_works.scss
@@ -1,7 +1,10 @@
 .works {
   padding-top: 70px;
   padding-bottom: 64px;
-   @media screen and (min-width: 768px) {
+    @media screen and (min-width: 768px){
+       padding-top: 80px;
+    }
+   @media screen and (min-width: 1200px) {
       padding-top: 128px;
    }
 
@@ -17,11 +20,15 @@
   margin-bottom: 40px;
 
   @media screen and (min-width: 768px) {
-    margin-bottom: 56px;
+    margin-bottom: 50px;
+    font-size: 18px;
+  }
+   @media screen and (min-width: 1200px) {
+ margin-bottom: 56px;
   padding-right: 340px;
   padding-left: 340px;
     font-size: 24px;
-  }
+   }
 }
 .works__btn {
  
@@ -44,8 +51,11 @@
       8px 32px 32px rgba(0, 0, 0, 0.15), 8px 64px 64px rgba(0, 0, 0, 0.15);
     transform: scale(1.02);
   }
-
-    @media screen and (min-width:768px){
+  @media screen and (min-width:768px){
+ padding: 15px 30px;
+    font-size: 18px;
+  }
+    @media screen and (min-width:1200px){
     min-width: 285px;
   height: 80px;
   padding: 24px 50px;
