--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,7 +5,7 @@
 @import './layouts/works';
 @import './layouts/KMC';
 @import './layouts/coinloan';
-
+@import './layouts/mobileMenu';
 
 @import './utilities/base';
 @import './utilities/variables';
