--- a/sass/layouts/_KMC.scss
+++ b/sass/layouts/_KMC.scss
@@ -1,11 +1,18 @@
 .kmc {
+  padding-bottom: 50px;
   background-color: #fafafa;
   @media screen and (min-width: 320px) and (max-width: 767px) {
     padding-top: 50px;
   }
    @media screen and (min-width: 768px){
     padding-top: 100px;
+    padding-bottom: 50px;
    }
+@media screen and (min-width: 1200px){
+  padding-top: 0;
+      padding-bottom: 64px;
+}
+
 }
 .kmc-container {
   @media screen and (min-width: 320px) and (max-width: 767px) {
@@ -15,19 +22,21 @@
     position: relative;
   }
 @media screen and (min-width: 768px){
- gap: 30px; 
-}
-  @media screen and (min-width: 768px) {
-    display: flex;
+ gap: 20px; 
+ display: flex;
     align-items: center;
-    gap: 40px;
-  }
 }
-.kms__title-wrap {
   @media screen and (min-width: 1200px) {
-    padding-left: 48px;
+    gap: 40px;
+    padding-right: 0;
+    padding-left: 0;
   }
 }
+// .kms__title-wrap {
+//   @media screen and (min-width: 1200px) {
+//     padding-left: 48px;
+//   }
+// }
 .kmc__title {
   font-weight: 700;
   font-size: 22px;
@@ -143,7 +152,18 @@
 .kmc__img {
   width: 320px;
   border-radius: 8px;
+
+ @media screen and (min-width: 480px){
+  margin-right: auto;
+  margin-left: auto;
+ }
   @media screen and (min-width: 768px) {
     border-radius: 0 16px 16px 0;
   }
+ @media screen and (min-width: 1200px) {
+ width: 778px;
+ }
+ 
+
+
 }
