--- a/sass/layouts/_coinloan.scss
+++ b/sass/layouts/_coinloan.scss
@@ -1,12 +1,13 @@
 .coinloan {
+  border-radius: 16px;
   padding-top: 64px;
   padding-bottom: 64px;
-}
-.coinloan-container {
-  border-radius: 20px;
-  padding-top: 50px;
-  padding-bottom: 50px;
-  text-align: center;
+   @media screen and (min-width: 768px){
+   padding-top: 83px;
+    padding-bottom: 83px;
+    background-repeat: no-repeat;
+    background-position: 50%;
+   }
   background-size: cover;
   background-image: url(../images/coinloan/bg@1x.jpg);
   @media (min-device-pixel-ratio: 2),
@@ -15,12 +16,25 @@
     (min-resolution: 2dppx) {
     background-image: url(../images/coinloan/bg@2x.jpg);
   }
+}
+.coinloan-container {
+  border-radius: 20px;
+  text-align: center;
+  @media screen and (min-width: 480px){
+    text-align: left;
+  }
+  // background-size: cover;
+  // background-image: url(../images/coinloan/bg@1x.jpg);
+  // @media (min-device-pixel-ratio: 2),
+  //   (-webkit-min-device-pixel-ratio: 2),
+  //   (min-resolution: 192dpi),
+  //   (min-resolution: 2dppx) {
+  //   background-image: url(../images/coinloan/bg@2x.jpg);
+  // }
   @media screen and (min-width: 768px) {
     text-align: left;
-    padding-top: 83px;
-    padding-bottom: 83px;
-   background-position: 50%;
-    background-repeat: no-repeat;
+  //  background-position: 50%;
+  //   background-repeat: no-repeat;
   }
 }
 
@@ -52,7 +66,7 @@ width: 460px;
 margin-bottom: 40px;
   }
   @media screen and (min-width: 1200px) {
-    margin-bottom: 48px;
+    margin-bottom: 58px;
     width: 592px;
     font-size: 18px;
   }
@@ -97,6 +111,9 @@ margin-bottom: 40px;
   @media screen and (min-width: 768px){
      font-size: 12px;
   }
+  @media screen and (min-width: 1200px){
+     font-size: 14px;
+  }
 }
 .coinloan__btn {
   background: #fafafa;
@@ -128,8 +145,12 @@ margin-bottom: 40px;
     margin-bottom: 0;
   }
   @media screen and (min-width: 1200px) {
-    padding: 24px 50px;
-    min-width: 288px;
+    padding: 24px 40px;
+    width: 288px;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 8px;
   }
   @media screen and (min-width: 320px) and (max-width: 1199px) {
     position: relative;
@@ -147,4 +168,7 @@ margin-bottom: 40px;
     position: absolute;
     right: 14px;
   }
+    @media screen and (min-width: 1200px) {
+      margin-left: 0;
+    }
 }
