--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,9 +3,6 @@ $main-color: #07142d;
   padding-top: 24px;
   padding-bottom: 24px;
   position: fixed;
-  @media screen and (min-width: 320px) and (max-width: 767px) {
-    display: none;
-  }
 }
 .header-container {
   display: flex;
@@ -18,6 +15,9 @@ $main-color: #07142d;
   }
 }
 .nav__list {
+    @media screen and (min-width: 320px) and (max-width: 767px) {
+    display: none;
+  }
   display: flex;
   align-items: center;
   gap: 15px;
@@ -51,7 +51,6 @@ $main-color: #07142d;
 .header__btn {
   padding: 10px 20px;
   min-width: 130px;
-
   border: none;
   color: #ffffff;
   font-weight: 700;
@@ -72,10 +71,17 @@ $main-color: #07142d;
       8px 32px 32px rgba(0, 0, 0, 0.15), 8px 64px 64px rgba(0, 0, 0, 0.15);
     transform: scale(1.02);
   }
+ @media screen and (min-width: 320px) and (max-width: 767px) {
+    display: none;
+  }
 
    @media screen and (min-width: 768px) {
     font-size: 14px;
+    padding: 10px 15px;
+    display: flex;
+    justify-content: center;
   }
+  
   @media screen and (min-width: 1200px) {
     padding: 17px 40px;
   }
