--- a/sass/utilities/_base.scss
+++ b/sass/utilities/_base.scss
@@ -10,8 +10,13 @@ body {
   margin-right: auto;
   margin-left: auto;
 
-  @media screen and (min-width:768px){
+  @media screen and (min-width:480px){
     width: 480px;
+    padding-right: 15px;
+  padding-left: 15px;
+  }
+    @media screen and (min-width:550px){
+    width: 550px;
     padding-right: 15px;
   padding-left: 15px;
   }
