--- a/sass/layouts/_KMC.scss
+++ b/sass/layouts/_KMC.scss
@@ -154,6 +154,7 @@
   border-radius: 8px;
 
  @media screen and (min-width: 480px){
+  width: 450px;
   margin-right: auto;
   margin-left: auto;
  }
