--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -61,6 +61,11 @@
 .benefits__img {
   width: 300px;
   margin-bottom: 20px;
+   @media screen and (min-width: 480px){
+    width: 400px;
+  margin-right: auto;
+  margin-left: auto;
+ }
   @media screen and (min-width: 768px) {
     width: 350px;
     margin-bottom: 0;
